# ngraphify

./: .gitignore  CLAUDE.md  Directory.Build.props  Directory.Build.targets  Graphiphy.sln  Ngraphiphy.sln  README.md
.docker/: README.md  memgraph.docker-compose.yml  neo4j.docker-compose.yml
docs/: MSBuild-Integration.md  Usage.md  mcp-config.md
native/: CMakeLists.txt  leiden_interop.cpp  leiden_interop.h
src/Graphiphy/: Graphiphy.csproj
src/Graphiphy.Cli/: AssemblyInfo.cs  Graphiphy.Cli.csproj  Program.cs  appsettings.json
src/Graphiphy.Llm/: A2AConfig.cs  AgentProviderResolver.cs  AnthropicConfig.cs  CopilotConfig.cs  GraphAgentFactory.cs  GraphPlugin.cs  GraphSession.cs  Graphiphy.Llm.csproj  IAgentConfig.cs  IGraphAgent.cs  MafGraphAgent.cs  OllamaConfig.cs  OpenAiConfig.cs
src/Graphiphy.MSBuild/: Graphiphy.MSBuild.csproj
src/Graphiphy.Pipeline/: GraphTools.cs  Graphiphy.Pipeline.csproj  RepositoryAnalysis.cs
src/Graphiphy.Storage/: GraphStoreFactory.cs  Graphiphy.Storage.csproj  IEmbeddingProvider.cs  IGraphStore.cs  IGraphStoreConfig.cs
src/Ngraphiphy.Cli/: AssemblyInfo.cs  Ngraphiphy.Cli.csproj  Program.cs  appsettings.json
src/Ngraphiphy.Llm/: A2AConfig.cs  AgentProviderResolver.cs  AnthropicConfig.cs  CopilotConfig.cs  GraphAgentFactory.cs  GraphPlugin.cs  GraphSession.cs  IAgentConfig.cs  IGraphAgent.cs  MafGraphAgent.cs  Ngraphiphy.Llm.csproj  OllamaConfig.cs  OpenAiConfig.cs
src/Ngraphiphy.MSBuild/: Ngraphiphy.MSBuild.csproj
src/Ngraphiphy.Pipeline/: GraphTools.cs  Ngraphiphy.Pipeline.csproj  RepositoryAnalysis.cs
(+230 files in other folders)
